--- a/example/basic.html
+++ b/example/basic.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <title>leaflet-measure</title>
   <link rel="stylesheet" href="../bower_components/normalize.css/normalize.css">
-  <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.7.3/leaflet.css">
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css">
   <link rel="stylesheet" href="../dist/leaflet-measure.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <style>
     body {
       font-size: 14px;
@@ -42,22 +43,30 @@
 </head>
 <body>
   <h1>leaflet-measure</h1>
-  <p class="github"><a href="//github.com/ljagis/leaflet-measure">github.com/ljagis/leaflet-measure</a></p>
+  <p class="github"><a href="https://github.com/ljagis/leaflet-measure">github.com/ljagis/leaflet-measure</a></p>
   <div id="map"></div>
-  <script src="//cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+  <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
   <script src="../dist/leaflet-measure.js"></script>
   <script>
   (function (L) {
     var map = L.map('map', {
-      measureControl: true,
       layersControl: true
     }).setView([29.7491289, -95.0807104], 16);
-    L.tileLayer('//server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
+    L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
       minZoom: 14,
       maxZoom: 18,
       attribution: '&copy; Esri &mdash; Sources: Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP, swisstopo, and the GIS User Community'
     }).addTo(map);
+
+var options = null// { primaryLengthUnit: 'meters', secondaryLengthUnit: 'kilometers' };
+    var measureControl = new L.Control.Measure(options);
+measureControl.addTo(map);
+
   })(window.L);
   </script>
+
+
+  <div id="target">
+  </div>
 </body>
 </html>
