--- a/src/leaflet-measure-template-results.html
+++ b/src/leaflet-measure-template-results.html
@@ -1,14 +1,13 @@
+<span class="mainHeading">Output</span>
+<% if (model.pointCount == 2 ) { %>
 <div class="group">
-<p class="lastpoint heading">Last Point</p>
-<p><%= model.lastCoord.dms.y %> <span class="coorddivider">/</span> <%= model.lastCoord.dms.x %></p>
-<p><%= humanize.numberFormat(model.lastCoord.dd.y, 6) %> <span class="coorddivider">/</span> <%= humanize.numberFormat(model.lastCoord.dd.x, 6) %></p>
-</div>
-<% if (model.pointCount > 1) { %>
-<div class="group">
-<p><span class="heading">Path Distance</span> <%= model.lengthDisplay %></p>
+<p><span class="heading">Length</span> <%= model.lengthDisplay %></p>
 </div>
 <% } %>
 <% if (model.pointCount > 2) { %>
+<div class="group">
+<p><span class="heading">Perimeter</span> <%= model.lengthDisplay %></p>
+</div>
 <div class="group">
 <p><span class="heading">Area</span> <%= model.areaDisplay %></p>
 </div>
