--- a/src/popuptemplates/area-popuptemplate.html
+++ b/src/popuptemplates/area-popuptemplate.html
@@ -1,7 +1,7 @@
 <h3>Area Measurement</h3>
 <p><%= model.areaDisplay %></p>
 <p><%= model.lengthDisplay %> Perimeter</p>
-<ul class="tasks">
+<ul class="tasks" style="display:none">
   <li><a href="#" class="js-zoomto zoomto">Center on this Area</a></li>
   <li><a href="#" class="js-deletemarkup deletemarkup">Delete</a></li>
 </ul>
