--- a/src/popuptemplates/line-popuptemplate.html
+++ b/src/popuptemplates/line-popuptemplate.html
@@ -1,6 +1,6 @@
 <h3>Linear Measurement</h3>
 <p><%= model.lengthDisplay %></p>
-<ul class="tasks">
+<ul class="tasks" style="display:none">
   <li><a href="#" class="js-zoomto zoomto">Center on this Line</a></li>
   <li><a href="#" class="js-deletemarkup deletemarkup">Delete</a></li>
 </ul>
