Small update to template text

--- a/src/leaflet-measure-template.html
+++ b/src/leaflet-measure-template.html
@@ -1,3 +1,5 @@
+<div class="Measure_howTo">Start creating a measurement by adding points to the map, when you have finished double click on the final point or click finish.</div>
+
 <a class="<%= model.className %>-toggle js-toggle" href="#" title="Measure distances and areas">Measure</a>
 <div class="<%= model.className %>-interaction js-interaction">
   <div class="js-startprompt startprompt">
